--- a/academy.html
+++ b/academy.html
@@ -6,15 +6,10 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="style.css">
-<link rel="manifest" href="manifest.json">
-<link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
-<link rel="alternate icon" href="assets/favicon.png" type="image/png">
-<link rel="icon" href="assets/favicon.ico" sizes="any">
-<link rel="apple-touch-icon" href="assets/apple-touch-icon.png">
-<meta name="theme-color" content="#1eb6a6">
+<link rel="icon" href="assets/favicon.ico" type="image/x-icon">
 <script defer src="script.js"></script>
 
-  <meta name="description" content="Learn how to secure your communications.">
+  <meta name="description" content="Learn how to secure your communications, protect your privacy, and operate with confidence.">
 </head>
 <body>
   
@@ -54,8 +49,13 @@
 
   <main class="container">
     
-<h1>Academy</h1><p>Guides and resources.</p>
-
+    <h1>CommsBlack Academy</h1>
+    <p>Learn how to secure your communications, protect your privacy, and operate with confidence in a digital‑first world.</p>
+    <h2>Core Topics</h2>
+    <details><summary>GrapheneOS Basics</summary><p>GrapheneOS minimizes attack surface and removes bloatware.</p></details>
+    <details><summary>VoIP & Anonymous Numbers</summary><p>Use internet‑based calling and messaging with private numbers.</p></details>
+    <details><summary>Faraday Protection</summary><p>Block wireless signals in transit and storage with Faraday gear.</p></details>
+    
   </main>
   
 <footer>
