--- a/contact.html
+++ b/contact.html
@@ -6,15 +6,10 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="style.css">
-<link rel="manifest" href="manifest.json">
-<link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
-<link rel="alternate icon" href="assets/favicon.png" type="image/png">
-<link rel="icon" href="assets/favicon.ico" sizes="any">
-<link rel="apple-touch-icon" href="assets/apple-touch-icon.png">
-<meta name="theme-color" content="#1eb6a6">
+<link rel="icon" href="assets/favicon.ico" type="image/x-icon">
 <script defer src="script.js"></script>
 
-  <meta name="description" content="Contact">
+  <meta name="description" content="Contact CommsBlack Mobile via Signal for privacy and security.">
 </head>
 <body>
   
@@ -54,8 +49,12 @@
 
   <main class="container">
     
-<h1>Contact</h1><p>Contact via Signal: @commsblack.10</p>
-
+    <h1>Contact</h1>
+    <p>For privacy and security, we only accept contact via Signal.</p>
+    <h2>Signal handle</h2>
+    <pre>@commsblack.10</pre>
+    <p><a class="btn" href="https://signal.me" target="_blank" rel="noopener">Message on Signal</a></p>
+    
   </main>
   
 <footer>
