--- a/faqs.html
+++ b/faqs.html
@@ -6,15 +6,10 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="style.css">
-<link rel="manifest" href="manifest.json">
-<link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
-<link rel="alternate icon" href="assets/favicon.png" type="image/png">
-<link rel="icon" href="assets/favicon.ico" sizes="any">
-<link rel="apple-touch-icon" href="assets/apple-touch-icon.png">
-<meta name="theme-color" content="#1eb6a6">
+<link rel="icon" href="assets/favicon.ico" type="image/x-icon">
 <script defer src="script.js"></script>
 
-  <meta name="description" content="FAQs">
+  <meta name="description" content="Everything you need to know about CommsBlack Mobile kits, services, and support.">
 </head>
 <body>
   
@@ -54,8 +49,11 @@
 
   <main class="container">
     
-<h1>FAQs</h1><p>Common questions.</p>
-
+    <h1>Frequently Asked Questions</h1>
+    <details open><summary>Do I need a subscription?</summary><p>No subscription from us. Some features use third‑party providers with their own costs.</p></details>
+    <details><summary>How do I recharge data or VoIP credit?</summary><p>Recharge directly with the providers, or we can guide you through it.</p></details>
+    <details><summary>Can I use my own SIM?</summary><p>Yes — Everyday Aussie is designed for your own SIM.</p></details>
+    
   </main>
   
 <footer>
