--- a/index.html
+++ b/index.html
@@ -6,12 +6,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="style.css">
-<link rel="manifest" href="manifest.json">
-<link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
-<link rel="alternate icon" href="assets/favicon.png" type="image/png">
-<link rel="icon" href="assets/favicon.ico" sizes="any">
-<link rel="apple-touch-icon" href="assets/apple-touch-icon.png">
-<meta name="theme-color" content="#1eb6a6">
+<link rel="icon" href="assets/favicon.ico" type="image/x-icon">
 <script defer src="script.js"></script>
 
   <meta name="description" content="Private. Secure. Anonymous. Speak Freely.">
@@ -55,13 +50,15 @@
   <main class="container">
     
     <section class="hero hero-split">
-      <h1 class="hero-title">Speak Freely</h1>
+      <div class="hero-copy">
+        <h1>Speak Freely</h1>
+        <div class="cta-row">
+          <a class="btn" href="products.html">Explore Products</a>
+          <a class="btn btn-outline" href="academy.html">Learn the Basics</a>
+        </div>
+      </div>
       <div class="hero-media">
         <img src="assets/hero-phone.png" alt="GrapheneOS phone — CommsBlack Mobile" />
-      </div>
-      <div class="hero-cta cta-row">
-        <a class="btn" href="products.html">Explore Products</a>
-        <a class="btn btn-outline" href="academy.html">Learn the Basics</a>
       </div>
     </section>
 
