--- a/products.html
+++ b/products.html
@@ -6,15 +6,10 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="style.css">
-<link rel="manifest" href="manifest.json">
-<link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
-<link rel="alternate icon" href="assets/favicon.png" type="image/png">
-<link rel="icon" href="assets/favicon.ico" sizes="any">
-<link rel="apple-touch-icon" href="assets/apple-touch-icon.png">
-<meta name="theme-color" content="#1eb6a6">
+<link rel="icon" href="assets/favicon.ico" type="image/x-icon">
 <script defer src="script.js"></script>
 
-  <meta name="description" content="Secure communication kits.">
+  <meta name="description" content="Secure communication kits for privacy & freedom. Choose the kit that fits your lifestyle.">
 </head>
 <body>
   
@@ -54,8 +49,68 @@
 
   <main class="container">
     
-<h1>Products</h1><p>From everyday privacy to sovereign global connectivity.</p>
-
+    <h1>Secure Communication Kits for Privacy & Freedom</h1>
+    <p>From everyday privacy to sovereign global connectivity — choose the kit that fits your lifestyle.</p>
+    <section class="card-grid">
+      <article class="card">
+        <h2>Everyday Aussie</h2>
+        <p class="muted">Privacy made simple</p>
+        <ul>
+          <li>GrapheneOS Pixel 8a</li>
+          <li>Case + privacy screen</li>
+          <li>Small Faraday bag</li>
+          <li>Your own SIM</li>
+          <li>USB‑C cable + 30W charger</li>
+        </ul>
+        <p class="price">$1,400 AUD</p>
+        <a class="btn" href="#checkout">Buy Now</a>
+      </article>
+      <article class="card">
+        <h2>Anonymous Aussie</h2>
+        <p class="muted">Anonymity without compromise</p>
+        <ul>
+          <li>GrapheneOS Pixel 8a</li>
+          <li>Case + privacy screen</li>
+          <li>Small Faraday bag</li>
+          <li>Silent.link eSIM preinstalled</li>
+          <li>Encrypted VoIP app & number</li>
+          <li>USB‑C cable + 30W charger</li>
+        </ul>
+        <p class="price">$1,600 AUD</p>
+        <a class="btn" href="#checkout">Buy Now</a>
+      </article>
+      <article class="card">
+        <h2>Operator Aussie</h2>
+        <p class="muted">Air‑gapped security for high‑risk work</p>
+        <ul>
+          <li>GrapheneOS Pixel 8a (airplane mode enforced)</li>
+          <li>Case + privacy screen</li>
+          <li>Large Faraday bag</li>
+          <li>Privacy router</li>
+          <li>Anonymous eSIM via router</li>
+          <li>Encrypted VoIP app & number</li>
+          <li>Ethernet cable + charger</li>
+        </ul>
+        <p class="price">$2,500 AUD</p>
+        <a class="btn" href="#checkout">Buy Now</a>
+      </article>
+      <article class="card">
+        <h2>Sovereign Aussie</h2>
+        <p class="muted">Secure connectivity anywhere on Earth</p>
+        <ul>
+          <li>GrapheneOS Pixel 8a (airplane mode enforced)</li>
+          <li>Case + privacy screen</li>
+          <li>Large Faraday bag</li>
+          <li>Privacy router</li>
+          <li>Anonymous eSIM via router</li>
+          <li>Encrypted VoIP app & number</li>
+          <li>Satellite option</li>
+        </ul>
+        <p class="price">$3,300 AUD</p>
+        <a class="btn" href="#checkout">Buy Now</a>
+      </article>
+    </section>
+    
   </main>
   
 <footer>
