--- a/404.html
+++ b/404.html
@@ -1,20 +1,15 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <title>404 — CommsBlack Mobile</title>
+  <title>Page Not Found — CommsBlack Mobile</title>
   
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="style.css">
-<link rel="manifest" href="manifest.json">
-<link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
-<link rel="alternate icon" href="assets/favicon.png" type="image/png">
-<link rel="icon" href="assets/favicon.ico" sizes="any">
-<link rel="apple-touch-icon" href="assets/apple-touch-icon.png">
-<meta name="theme-color" content="#1eb6a6">
+<link rel="icon" href="assets/favicon.ico" type="image/x-icon">
 <script defer src="script.js"></script>
 
-  <meta name="description" content="404">
+  <meta name="description" content="404 error page for CommsBlack Mobile.">
 </head>
 <body>
   
@@ -53,7 +48,7 @@
 </header>
 
   <main class="container">
-    <h1>404</h1><p>Return <a href='index.html'>home</a>.</p>
+    <h1>404 — Page Not Found</h1><p>The page you’re looking for doesn’t exist. <a href='index.html'>Return home</a>.</p>
   </main>
   
 <footer>
