--- a/products.html
+++ b/products.html
@@ -10,6 +10,31 @@
 <script defer src="script.js"></script>
 
   <meta name="description" content="Secure communication kits for privacy & freedom. Choose the kit that fits your lifestyle.">
+
+
+<!-- BEGIN Gallery Styles (Enhanced) -->
+<style>
+  .cbm-gallery { display: grid; gap: 0.75rem; }
+  .cbm-gallery-main { position: relative; display: grid; place-items: center; background: #fafafa; border: 1px solid #e5e7eb; border-radius: 0.75rem; padding: 0.75rem; }
+  .cbm-gallery-main img { max-width: 100%; height: auto; display: block; object-fit: contain; border-radius: 0.5rem; }
+  .cbm-gallery-btn { position: absolute; top: 50%; transform: translateY(-50%); border: none; background: rgba(17, 24, 39, 0.7); color: #fff; width: 2.5rem; height: 2.5rem; border-radius: 9999px; cursor: pointer; font-size: 1.15rem; line-height: 2.5rem; text-align: center; transition: transform 120ms ease, background 120ms ease; }
+  .cbm-gallery-btn:hover { transform: translateY(-50%) scale(1.05); background: rgba(17, 24, 39, 0.85); }
+  .cbm-gallery-btn.prev { left: 0.5rem; }
+  .cbm-gallery-btn.next { right: 0.5rem; }
+  .cbm-gallery-thumbs { display: grid; grid-auto-flow: column; gap: 0.5rem; overflow-x: auto; padding-bottom: 0.25rem; }
+  .cbm-thumb { width: 72px; height: 72px; border: 1px solid #e5e7eb; border-radius: 0.5rem; padding: 0.25rem; cursor: pointer; background: #fff; display: grid; place-items: center; transition: box-shadow 120ms ease, transform 120ms ease; }
+  .cbm-thumb:hover { box-shadow: 0 2px 8px rgb(0 0 0 / 0.08); transform: translateY(-1px); }
+  .cbm-thumb img { max-width: 100%; max-height: 100%; object-fit: contain; }
+  .cbm-thumb[aria-selected="true"] { outline: 2px solid #2563eb; outline-offset: 2px; }
+  /* Lightbox */
+  .cbm-lightbox { position: fixed; inset: 0; display: none; align-items: center; justify-content: center; background: rgba(0,0,0,0.85); z-index: 9999; }
+  .cbm-lightbox.open { display: flex; }
+  .cbm-lightbox img { max-width: min(92vw, 1200px); max-height: 88vh; border-radius: 0.5rem; }
+  .cbm-lightbox .cbm-close { position: absolute; top: 1rem; right: 1rem; background: rgba(255,255,255,0.15); color: #fff; border: none; width: 2.5rem; height: 2.5rem; border-radius: 9999px; cursor: pointer; font-size: 1.25rem; }
+</style>
+<!-- END Gallery Styles (Enhanced) -->
+
+
 </head>
 <body>
   
@@ -54,6 +79,14 @@
     <section class="card-grid">
       <article class="card">
         <h2>Everyday Aussie</h2>
+        <div class="product-images" aria-label="Product images">
+          <img src="assets/img/products/product1.jpg" alt="" loading="lazy" class="product-img">
+        </div>
+
+        <div class="product-images" aria-label="Product images">
+          <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fthfvnext.bing.com%2Fth%2Fid%2FOIP.qnPSnpyWJHNjZrI-F-3oogHaHa%3Fr%3D0%26cb%3Dthfvnext%26pid%3DApi&f=1&ipt=3a8516bb5f5c8c4eab1a0b0f9bcfa150104850a6c2d1b4aac38f60924f2b8d82&ipo=images" alt="" loading="lazy" class="product-img">
+        </div>
+
         <p class="muted">Privacy made simple</p>
         <ul>
           <li>GrapheneOS Pixel 8a</li>
@@ -67,6 +100,14 @@
       </article>
       <article class="card">
         <h2>Anonymous Aussie</h2>
+        <div class="product-images" aria-label="Product images">
+          <img src="assets/img/products/product1.jpg" alt="" loading="lazy" class="product-img">
+        </div>
+
+        <div class="product-images" aria-label="Product images">
+          <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fthfvnext.bing.com%2Fth%2Fid%2FOIP.qnPSnpyWJHNjZrI-F-3oogHaHa%3Fr%3D0%26cb%3Dthfvnext%26pid%3DApi&f=1&ipt=3a8516bb5f5c8c4eab1a0b0f9bcfa150104850a6c2d1b4aac38f60924f2b8d82&ipo=images" alt="" loading="lazy" class="product-img">
+        </div>
+
         <p class="muted">Anonymity without compromise</p>
         <ul>
           <li>GrapheneOS Pixel 8a</li>
@@ -81,6 +122,16 @@
       </article>
       <article class="card">
         <h2>Operator Aussie</h2>
+        <div class="product-images" aria-label="Product images">
+          <img src="assets/img/products/product1.jpg" alt="" loading="lazy" class="product-img">
+          <img src="assets/img/products/product2.jpg" alt="" loading="lazy" class="product-img">
+        </div>
+
+        <div class="product-images" aria-label="Product images">
+          <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fthfvnext.bing.com%2Fth%2Fid%2FOIP.qnPSnpyWJHNjZrI-F-3oogHaHa%3Fr%3D0%26cb%3Dthfvnext%26pid%3DApi&f=1&ipt=3a8516bb5f5c8c4eab1a0b0f9bcfa150104850a6c2d1b4aac38f60924f2b8d82&ipo=images" alt="" loading="lazy" class="product-img">
+          <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%2Fid%2FOIP.jpobR3cMBUniZEsQlHdkDQHaHa%3Fpid%3DApi&f=1&ipt=b9d97d87a3a3e2f3a995786f86d4d502282054ab2978596d050de676105c270d&ipo=images" alt="" loading="lazy" class="product-img">
+        </div>
+
         <p class="muted">Air‑gapped security for high‑risk work</p>
         <ul>
           <li>GrapheneOS Pixel 8a (airplane mode enforced)</li>
@@ -96,6 +147,18 @@
       </article>
       <article class="card">
         <h2>Sovereign Aussie</h2>
+        <div class="product-images" aria-label="Product images">
+          <img src="assets/img/products/product1.jpg" alt="" loading="lazy" class="product-img">
+          <img src="assets/img/products/product2.jpg" alt="" loading="lazy" class="product-img">
+          <img src="assets/img/products/product3.jpg" alt="" loading="lazy" class="product-img">
+        </div>
+
+        <div class="product-images" aria-label="Product images">
+          <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fthfvnext.bing.com%2Fth%2Fid%2FOIP.qnPSnpyWJHNjZrI-F-3oogHaHa%3Fr%3D0%26cb%3Dthfvnext%26pid%3DApi&f=1&ipt=3a8516bb5f5c8c4eab1a0b0f9bcfa150104850a6c2d1b4aac38f60924f2b8d82&ipo=images" alt="" loading="lazy" class="product-img">
+          <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%2Fid%2FOIP.jpobR3cMBUniZEsQlHdkDQHaHa%3Fpid%3DApi&f=1&ipt=b9d97d87a3a3e2f3a995786f86d4d502282054ab2978596d050de676105c270d&ipo=images" alt="" loading="lazy" class="product-img">
+          <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fthvnext.bing.com%2Fth%2Fid%2FOIP.7lju8PQW0n5ouXQYajY8NwHaEc%3Fcb%3Ducfimgc2%26pid%3DApi&f=1&ipt=6211460105d95d378d809290b3d5a5c78a3e8b8f1d8313c6f31189f277a79eb8&ipo=images" alt="" loading="lazy" class="product-img">
+        </div>
+
         <p class="muted">Secure connectivity anywhere on Earth</p>
         <ul>
           <li>GrapheneOS Pixel 8a (airplane mode enforced)</li>
@@ -118,6 +181,95 @@
     <p>© 2025 CommsBlack Mobile. All rights reserved.</p>
   </div>
 </footer>
+
+
+
+<!-- BEGIN Gallery Script (Enhanced) -->
+<script>
+(function () {
+  // Create a single lightbox root
+  let lb = document.createElement('div');
+  lb.className = 'cbm-lightbox';
+  lb.innerHTML = '<button class="cbm-close" aria-label="Close">×</button><img alt="Expanded image">';
+  document.addEventListener('DOMContentLoaded', function() { document.body.appendChild(lb); });
+  const lbImg = () => lb.querySelector('img');
+  lb.addEventListener('click', (e) => {
+    if (e.target === lb || e.target.classList.contains('cbm-close')) closeLB();
+  });
+  document.addEventListener('keydown', (e) => {
+    if (e.key === 'Escape') closeLB();
+  });
+  function openLB(src, alt) { lbImg().src = src; lbImg().alt = alt || ''; lb.classList.add('open'); }
+  function closeLB() { lb.classList.remove('open'); lbImg().src = ''; }
+
+  function buildGallery(container) {
+    const imgs = Array.from(container.querySelectorAll('img'));
+    if (!imgs.length) return;
+    const gallery = document.createElement('div');
+    gallery.className = 'cbm-gallery';
+    const main = document.createElement('div');
+    main.className = 'cbm-gallery-main';
+    const mainImg = document.createElement('img');
+    mainImg.alt = imgs[0].alt || '';
+    mainImg.loading = 'lazy';
+    mainImg.src = imgs[0].src;
+    mainImg.style.cursor = 'zoom-in';
+    mainImg.addEventListener('click', () => openLB(mainImg.src, mainImg.alt));
+    main.appendChild(mainImg);
+    const prev = document.createElement('button');
+    prev.className = 'cbm-gallery-btn prev';
+    prev.setAttribute('type', 'button');
+    prev.setAttribute('aria-label', 'Previous image');
+    prev.textContent = '‹';
+    const next = document.createElement('button');
+    next.className = 'cbm-gallery-btn next';
+    next.setAttribute('type', 'button');
+    next.setAttribute('aria-label', 'Next image');
+    next.textContent = '›';
+    main.appendChild(prev);
+    main.appendChild(next);
+    const thumbs = document.createElement('div');
+    thumbs.className = 'cbm-gallery-thumbs';
+    imgs.forEach((img, idx) => {
+      const t = document.createElement('button');
+      t.className = 'cbm-thumb';
+      t.setAttribute('type', 'button');
+      t.setAttribute('aria-selected', idx === 0 ? 'true' : 'false');
+      t.setAttribute('aria-label', 'Thumbnail ' + (idx + 1));
+      const ti = document.createElement('img');
+      ti.src = img.src;
+      ti.alt = img.alt || '';
+      t.appendChild(ti);
+      t.addEventListener('click', () => select(idx));
+      thumbs.appendChild(t);
+    });
+    let current = 0;
+    function select(i) {
+      const n = imgs.length;
+      current = ((i % n) + n) % n; // infinite loop wrap
+      mainImg.src = imgs[current].src;
+      mainImg.alt = imgs[current].alt || '';
+      Array.from(thumbs.children).forEach((el, j) => {
+        el.setAttribute('aria-selected', j === current ? 'true' : 'false');
+      });
+    }
+    prev.addEventListener('click', () => select(current - 1));
+    next.addEventListener('click', () => select(current + 1));
+    // Build DOM
+    gallery.appendChild(main);
+    gallery.appendChild(thumbs);
+    container.innerHTML = '';
+    container.appendChild(gallery);
+    // Init
+    select(0);
+  }
+  document.addEventListener('DOMContentLoaded', function() {
+    document.querySelectorAll('.product-images').forEach(buildGallery);
+  });
+})();
+</script>
+<!-- END Gallery Script (Enhanced) -->
+
 
 </body>
 </html>
